--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-Jinja2==2.10
-MarkupSafe==1.0
-PySocks==1.6.8
-Pygments==2.2.0
-Send2Trash==1.5.0
 backcall==0.1.0
 backports-abc==0.5
 bleach==2.1.4
 certifi==2018.8.24
 chardet==3.0.4
+colorama==0.4.1
 cycler==0.10.0
 decorator==4.3.0
 entrypoints==0.2.3
@@ -18,17 +14,19 @@ ipython==6.5.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.1
 jedi==0.12.1
+Jinja2==2.10
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 kiwisolver==1.0.1
+MarkupSafe==1.0
 matplotlib==2.2.3
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
-notebook==5.6.0
+notebook==5.7.2
 numpy==1.15.1
 oauthlib==2.1.0
 pandas==0.23.4
@@ -40,13 +38,18 @@ prettytable==0.7.2
 prometheus-client==0.3.1
 prompt-toolkit==1.0.15
 ptyprocess==0.6.0
+Pygments==2.2.0
 pyparsing==2.2.0
+PySocks==1.6.8
 python-dateutil==2.7.3
 pytz==2018.5
+pywinpty==0.5.5
 pyzmq==17.1.2
 qtconsole==4.4.1
 requests==2.19.1
 requests-oauthlib==1.0.0
+Send2Trash==1.5.0
+simplegeneric==0.8.1
 six==1.11.0
 terminado==0.8.1
 testpath==0.3.1
