--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,10 @@
-astroid==2.3.2
-backcall==0.1.0
-backports-abc==0.5
-bleach==2.1.4
-certifi==2018.8.24
-chardet==3.0.4
-colorama==0.4.1
-cycler==0.10.0
-decorator==4.3.0
-entrypoints==0.2.3
-html5lib==1.0.1
-idna==2.7
-ipykernel==4.9.0
-ipython==6.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.1
-isort==4.3.21
-jedi==0.12.1
-Jinja2==2.10.3
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-kiwisolver==1.0.1
-lazy-object-proxy==1.4.3
-MarkupSafe==1.0
-matplotlib==2.2.3
-mccabe==0.6.1
-mistune==0.8.3
-nbconvert==5.3.1
-nbformat==4.4.0
-notebook==6.0.1
-numpy==1.15.1
-oauthlib==2.1.0
-pandas==0.23.4
-pandocfilters==1.4.2
-parso==0.3.1
-pexpect==4.6.0
-pickleshare==0.7.4
-prettytable==0.7.2
-prometheus-client==0.3.1
-prompt-toolkit==1.0.15
-ptyprocess==0.6.0
-pycodestyle==2.5.0
-Pygments==2.2.0
-pylint==2.4.3
-pyparsing==2.2.0
-PySocks==1.6.8
-python-dateutil==2.7.3
-pytz==2018.5
-pywin32==225
-pywinpty==0.5.5
-pyzmq==17.1.2
-qtconsole==4.4.1
-requests==2.20.0
-requests-oauthlib==1.0.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-six==1.12.0
-terminado==0.8.1
-testpath==0.3.1
-tornado==5.1
-traitlets==4.3.2
-tweepy==3.8.0
-typed-ast==1.4.0
-typing==3.6.6
-urllib3==1.25.6
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.4.1
-wrapt==1.11.2
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
+oauthlib==3.2.0
+prettytable==3.2.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+tweepy==4.6.0
+urllib3==1.26.8
+wcwidth==0.2.5
