--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
+astroid==2.9.3
+autopep8==1.6.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
+colorama==0.4.4
 idna==3.3
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.6.1
 oauthlib==3.2.0
+platformdirs==2.5.1
 prettytable==3.2.0
+pycodestyle==2.8.0
+pylint==2.12.2
+PySocks==1.7.1
+python-decouple==3.6
 requests==2.27.1
 requests-oauthlib==1.3.1
-tweepy==4.6.0
+six==1.16.0
+toml==0.10.2
+tweepy==3.8.0
+typing_extensions==4.1.1
 urllib3==1.26.8
 wcwidth==0.2.5
+wrapt==1.13.3
